another great patch from dean, with a honker of a comment explaining what is going on from me. we need to check more than one level down to see if we should move the selected item back to |mTimerMenu| when the selection timer fires. fixes bug 29400. yay!!!! r=hyatt.